Update OG/Twitter image to local opengraph.jpg

--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,12 @@
     <meta property="og:title" content="GTN — Global Team of Network" />
     <meta property="og:description" content="Empower networkers, leaders, and investors globally. Turn your network into net worth." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta property="og:image" content="/opengraph.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@replit" />
     <meta name="twitter:title" content="GTN — Global Team of Network" />
     <meta name="twitter:description" content="Empower networkers, leaders, and investors globally." />
-    <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta name="twitter:image" content="/opengraph.jpg" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
